# openMVG

./: .gitmodules  Dockerfile
src/: CMakeLists.txt
src/openMVG/bundle_adjustment/: problem_data_container.hpp  rig_pinhole_ceres_functor.hpp
src/openMVG/image/: image_converter.hpp
src/openMVG/linearProgramming/: linearProgrammingOSI_X.hpp
src/openMVG/linearProgramming/lInfinityCV/: global_translations_fromTriplets.hpp  rig_tijsAndXis_From_xi_Ri.hpp  tijsAndXis_From_xi_Ri.hpp
src/openMVG/matching/: indMatch.hpp  indMatch_utils.hpp
src/openMVG/matching_image_collection/: GeometricFilter.hpp  Rig_ACRobust.hpp  rig_GeometricFilter.hpp
src/openMVG/multiview/: CMakeLists.txt  solver_nonCentral_kernel.cpp  solver_nonCentral_kernel.hpp  triangulation_nview.cpp  triangulation_nview.hpp
src/openMVG/numeric/: numeric.h
src/openMVG/robust_estimation/: CMakeLists.txt  robust_estimator_ACRansac.hpp  robust_estimator_ACRansacKernelAdaptator.hpp
src/openMVG/tracks/: tracks.hpp
src/openMVG_Samples/robust_homography_guided/: robust_homography_guided.cpp
src/software/: CMakeLists.txt
src/software/SfM/: CMakeLists.txt  SfMIOHelper.hpp  SfMIncrementalEngine.cpp  SfMIncrementalEngine.hpp  SfMRobust.hpp  main_IncrementalSfM.cpp  main_featureDetect.cpp  pairwiseAdjacencyDisplay.hpp
src/software/globalSfM/: CMakeLists.txt  SfMGlobalEngine_triplet_t_estimator.hpp  SfMGlobal_Rig_tij_computation.hpp  SfMGlobal_tij_computation.hpp  SfMRigidGlobalEngine.cpp  SfMRigidGlobalEngine.hpp  indexedImageGraph.hpp  main_rigidRig_GlobalSfM.cpp
src/software/rig_globalSfM/: CMakeLists.txt  SfMGlobal_Rig_tij_computation.hpp  SfMReconstructionDataRig.hpp  SfMRigidGlobalEngine.cpp  SfMRigidGlobalEngine.hpp  SfMRigidGlobalEngine_triplet_t_estimator.hpp  main_computeMatchesRig.cpp  main_rigidRig_GlobalSfM.cpp
